--- a/login-signup/src/components/homepage/homepage.css
+++ b/login-signup/src/components/homepage/homepage.css
@@ -1,24 +1,39 @@
-.homepage {
+ .homepage {
+    background-image:url(hh.jpg);
+    background-size:cover;
     display: flex;
+    font-size: 1.50rem;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
     flex-direction: column;
     align-items: center;
     justify-content:center;
-    width: 50vw;
-    height: 50vh;
-    border-radius: 20px;
-    box-shadow: 0 0 15px 5px grey;
-    background: white;
-    position: relative
+    width: 90vw;
+    height: 50vw;
+    border-radius: 30px;
+    box-shadow: 0 0 15px 5px rgb(241, 191, 25);
+    
+    position: relative;
 }
 
 .homepage > .button {
-    background: #1877f2;
-    border: 1px solid #1877f2;
-    color: #fff;
-    font-size: 1.25rem;
+    background: #1126e6;
+    border: 2px solid #09c6e7;
+    color: rgb(240, 241, 245);
+    font-size: 1.50rem;
     padding: 0.5rem;
     margin: 0.5rem 0;
     border-radius: 8px;
     outline: none;
     cursor: pointer;
 }
+
+body {
+    
+    background-color: #f06000;
+    color: rgb(50, 108, 231);
+    padding: 2px;
+    font-family: Arial;
+    text-align: center;
+  } 
+
