--- a/login-signup/src/components/login/login.css
+++ b/login-signup/src/components/login/login.css
@@ -3,7 +3,7 @@
     width: 400px;
     background: #fff;
     border: 1px solid #dddfe2;
-    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    box-shadow: 0 2px 4px rgba(225, 248, 20, 0.1), 0 8px 16px rgba(210, 245, 14, 0.1);
     border-radius: 8px;
     padding: 1rem;
     align-items: center;
@@ -12,7 +12,7 @@
 
 .login > input {
     border-radius: 8px;
-    border: 2px solid #dddfe2;
+    border: 2px solid #5091f1;
     outline: none;
     color: #1d2129;
     margin: 0.5rem 0;
@@ -28,7 +28,7 @@
     font-size: 1.25rem;
     padding: 0.5rem;
     margin: 0.5rem 0;
-    border-radius: 8px;
+    border-radius: 18px;
     outline: none;
     cursor: pointer;
 }
