--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -1,16 +1,18 @@
 .site-layout-content {
     min-height: 280px;
     padding: 24px;
-    background: rgb(7, 19, 192);
   }
   #components-layout-demo-top .logo {
     float: left;
     width: 120px;
     height: 31px;
     margin: 16px 24px 16px 0;
-    background-color: rgb(14, 14, 207);
   }
   .ant-row-rtl #components-layout-demo-top .logo {
     float: right;
     margin: 16px 0 16px 24px;
   }
+  .ant-layout-footer {
+    color: rgb(247 240 240 / 85%);
+    background: #084eb6;
+}
