--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,26 @@
-.ant-layout {
+/* /* .ant-layout {
     background: #fff !important;
+  } */
+  
+  @media only screen and (max-width: 991px) {
+    .pricingBlock .ant-row > div:nth-child(2) .ant-list-item {
+      transform: scale(1.14);
+    }
   }
   
+  @media only screen and (max-width: 767px) {
+    .pricingBlock .ant-row > div:nth-child(2) .ant-list-item {
+      transform: scale(1);
+    }
   
+    .mobileVisible {
+      display: block;
+    }
+    
+    .mobileHidden {
+      display: none;
+    }
+  }
   
   
   
