--- a/src/components/home/info.css
+++ b/src/components/home/info.css
@@ -36,8 +36,21 @@
   background-image: url('../../assets/images/five.jpg');
   vertical-align:middle;
   max-width: 30%;
+  
   height: 400px;
   border-radius: 10px;
   box-sizing: border-box;
 }
 
+ */
+/* 
+ p {
+  font-size: 16px;
+  line-height: 1.6;
+}
+.titleHolder {
+  text-align: center;
+  position: relative;
+  padding: 0 0 20px;
+  margin: 0 0 40px;
+} */
