--- a/src/components/home/timing.css
+++ b/src/components/home/timing.css
@@ -1,7 +1,10 @@
 .timing{
-  
+
   background-color: aqua;
-  margin: 0 auto;
+  margin: 1% auto;
   width: 1200px;
-  padding: 0 15px;
+  padding:15px ;
+  
+  border-style: solid;
+  border-color: darkgoldenrod;
 }
